Changed initial defaults in config.h
The defaults in config.h have been changed to increase the display
brightness range, allowing the user to increase the brightness of an
aging display through the menus without the need to reconfigure and
reprogram the firmware.  (firmware/config.h)

For the xmas hardware revision, the initial/preloaded drift correction
constant is now set by default to a value calibrated with the
recommended parts on a OSH Park board.  (hardware/config.h)

--- a/README
+++ b/README
@@ -88,6 +88,7 @@ the official Adafruit firmware:
   - no beeping or time loss after external power failure
   - low battery warning before battery failure
   - per-digit brightness adjustment for uneven displays
+  - larger range for user-configured display brightness
   - optionally disable display during specified time periods
 
 *  An external GPS module, such as the Adafruit Ultimate GPS, is
